--- a/style.css
+++ b/style.css
@@ -88,3 +88,21 @@ p{
     color: #FFFFFF;
     
 }
+
+.message{
+    background: #E4EDF1;
+    box-shadow: 2px 2px 2px rgba(85, 85, 85, 0.5);
+
+    font-family: 'Dancing Script', cursive;
+
+    font-weight: 400;
+    font-size: 2.4rem;
+    line-height: 29px;
+    text-align: center;
+
+    color: #000000;
+
+    padding: 1rem;
+    gap: 1rem;
+
+}
