--- a/style.css
+++ b/style.css
@@ -110,10 +110,20 @@ p {
 
 /* ========= ANIMAÇÕES======================================================================== */
 
+
 body {
     background: linear-gradient(45deg, #190361, #bb00ff);
     animation: gradient 10s ease infinite;
     background-size: 200% 200%;
+}
+
+.screen1 form button img:hover{
+    animation: shake .2s;
+    animation-iteration-count: 4;
+}
+
+.screen2 form p {
+    animation: openXY 5s;
 }
 
 @keyframes gradient {
@@ -128,4 +138,35 @@ body {
     100% {
         background-position: 0% 50%;
     }
+}
+
+@keyframes openXY {
+    0% {
+        transform: translateY(100%) scale(0);
+    }
+
+    100%{
+        transform: translateY(0%) scale(1);
+    }
+}
+
+
+
+@keyframes shake {
+
+    /* Right left */
+
+    0% {margin-left: 0;}
+    25% {margin-left: 3px;}
+    50% {margin-left: 0;}
+    75% {margin-left: -3px;}
+    100% {margin-left: 0;}
+
+    /* Top down */
+
+    0% {margin-top: 0;}
+    25% {margin-top: 2px;}
+    50% {margin-top: 0;}
+    75% {margin-top: -2px;}
+    100% {margin-top: 0;}
 }
